@@ -33,7 +33,9 @@ import java.util.List;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileUtil;
+import org.apache.hadoop.hbase.HBaseConfiguration;
 import org.apache.zookeeper.server.NIOServerCnxn;
 import org.apache.zookeeper.server.ZooKeeperServer;
 import org.apache.zookeeper.server.persistence.FileTxnLog;
@@ -61,9 +63,17 @@ public class MiniZooKeeperCluster {
   private int activeZKServerIndex;
   private int tickTime = 0;
 
+  private Configuration configuration;
+
   /** Create mini ZooKeeper cluster. */
   public MiniZooKeeperCluster() {
+    this(HBaseConfiguration.create());
+  }
+
+  /** Create mini ZooKeeper cluster. */
+  public MiniZooKeeperCluster(Configuration configuration) {
     this.started = false;
+    this.configuration = configuration;
     activeZKServerIndex = -1;
     zooKeeperServers = new ArrayList<ZooKeeperServer>();
     clientPortList = new ArrayList<Integer>();
@@ -131,12 +141,13 @@ public class MiniZooKeeperCluster {
       } else {
         tickTimeToUse = TICK_TIME;
       }
+      int numberOfConnections = this.configuration.getInt("hbase.zookeeper.property.maxClientCnxns",5000);
       ZooKeeperServer server = new ZooKeeperServer(dir, dir, tickTimeToUse);    
       NIOServerCnxn.Factory standaloneServerFactory;
       while (true) {
         try {
           standaloneServerFactory =
-            new NIOServerCnxn.Factory(new InetSocketAddress(clientPort));
+            new NIOServerCnxn.Factory(new InetSocketAddress(clientPort), numberOfConnections);
         } catch (BindException e) {
           LOG.info("Failed binding ZK Server to client port: " + clientPort);
           //this port is already in use. try to use another
